changed index a bit

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 				<div id="instructions">
 				<p>
-				  Examine the random number.<br/>There are four images above. Click on an image to add points to your score.<br/>Win the game by exactly matching your total score to the random number. If your total score exceeds the random number, you lose the game.<br/>You must click on an image to discover its hidden value.<br/>Each time the game starts, the hidden values for each image will also change. Good luck!<br/>~completed the "easy" project this week~
+				  Examine the random number.<br/>There are four images above. Click on an image to add points to your score.<br/>Win the game by exactly matching your total score to the random number. If your total score exceeds the random number, you lose the game.<br/>You must click on an image to discover its hidden value.<br/>Each time the game starts, the hidden values for each image will also change. Good luck!<br/>~completed the "easy" project this week. hope you like!~
 				</p>
 				</div>
 				
